# c_json

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
_gitlab/: 1-templates.yml  2-build-jobs.yml  3-quality-jobs.yml  4-test-jobs.yml  5-stable-branch-jobs.yml
_scripts/: fetch_deps.sh
_scripts/builds/: android.sh  clear.sh  linux.sh
_scripts/tests/: all.sh  coverage.sh  cppcheck.sh  cpplint.sh  ctest.sh  flawfinder.sh  fuzz.sh  valgrind.sh
fuzz/: fuzz_parser.c
fuzz/corpus/: valid_full.json
inc/: cJSON.h  c_json.h  c_json_list.h  c_json_macro.h  c_json_mem.h
src/: cJSON.c  c_json.c  c_json_list.c  c_json_mem.c
test/: helpers.hpp  test_add.cpp  test_coverage.cpp  test_edge_cases.cpp  test_error_paths.cpp  test_get.cpp  test_manual.cpp  test_mem.cpp  test_parser.cpp
